# ecoclearworkflow_hackthon

./: .env.local.example  .firebaserc  .gitignore  CHANGELOG.md  Dockerfile.frontend  README.md  docker-compose.yml  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json  storage.rules  tailwind.config.ts  tsconfig.tsbuildinfo  turbo.json  vercel.json
docs/: PS.txt  Repo Upgrade Implementation Plan.txt  blueprint.md
scripts/: seed-firestore.mjs
services/ai-agent-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/ai-agent-service/app/: main.py
services/ai-agent-service/app/agents/: nodes.py  regulations.py  supervisor.py
services/ai-agent-service/app/models/: schemas.py
services/collaboration-service/: .env.example  Dockerfile  discovery_server.cjs  discovery_tunnel.json  package-lock.json  package.json  start_all.sh  start_tunnel.sh  tunnel.json
services/gis-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/gis-service/app/: main.py
services/gis-service/app/data/: eco_zones.py  sentinel.py
services/gis-service/app/models/: schemas.py
src/ai/: dev.ts
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/components/: AadhaarEKYC.tsx  ApplicationTimeline.tsx  CollaborativeEditor.tsx  ESignDocument.tsx  MapPicker.tsx  MarkdownContent.tsx  SLABadge.tsx  StatusBadge.tsx  ThemeToggle.tsx  UPIPayment.tsx
src/lib/: StoreContext.tsx  api-client.ts  crypto.ts  document-requirements.ts  firebase.ts  gis-data.ts  india-stack.ts  store.ts  template-vars.ts  types.ts
(+45 files in other folders)
