[project]
name = "ecoclear-gis-service"
version = "1.0.0"
description = "Geospatial analysis service for CECB eco-sensitive zone enforcement"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "shapely>=2.0",
    "geopandas>=1.0.0",
    "pyproj>=3.6.0",
    "geojson>=3.1.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]
